src/liboot_engine.h

typedef struct OoTEngine OoTEngine;
typedef enum OoTResult
{
    OOT_ENGINE_RESULT_OK = 0,
    OOT_ENGINE_RESULT_INVALID_ARGUMENT = -1,
    OOT_ENGINE_RESULT_API_VERSION = -2,
    OOT_ENGINE_RESULT_OUT_OF_MEMORY = -3,
    OOT_ENGINE_RESULT_SINGLETON_IN_USE = -4,
    OOT_ENGINE_RESULT_ROM_UNSUPPORTED = -5,
    OOT_ENGINE_RESULT_NOT_INITIALIZED = -6,
    OOT_ENGINE_RESULT_BUSY = -7,
    OOT_ENGINE_RESULT_LINK_ALREADY_EXISTS = -8,
    OOT_ENGINE_RESULT_LINK_NOT_FOUND = -9,
    OOT_ENGINE_RESULT_AGE_RESTRICTED = -10,
    OOT_ENGINE_RESULT_TARGET_CAPACITY = -11,
    OOT_ENGINE_RESULT_TARGET_NOT_FOUND = -12,
    OOT_ENGINE_RESULT_SCENE_LOAD_FAILED = -13,
    /* The scene collision was committed, but its display-list mesh could not
       be interpreted (the native oot_scene_load result is -9). */
    OOT_ENGINE_RESULT_SCENE_GEOMETRY_UNAVAILABLE = -14,
    OOT_ENGINE_RESULT_NO_FRAME = -15,
    OOT_ENGINE_RESULT_NOT_AVAILABLE = -16
} OoTResult;
typedef void (*OoTEngineDebugCallback)(void *userData, const char *message);
typedef void (*OoTEngineSfxCallback)(void *userData, const struct OoTSfxEvent *event);
/* Only structSize, apiVersion, romData, and romSize are required. Fields not
   covered by structSize receive the defaults documented below. The ROM is
   copied by liboot during creation, need not outlive oot_engine_create, and
   must be OOT_ENGINE_MIN_ROM_SIZE..OOT_ENGINE_MAX_ROM_SIZE bytes. */
typedef struct OoTEngineConfig
{
    uint32_t structSize;
    uint32_t apiVersion;
    const uint8_t *romData;
    size_t romSize;
    uint32_t actorCapacity;       /* 0/default 64; maximum 4096 */
    uint32_t maxSubsteps;         /* 0/default 4; otherwise 1..1000 */
    float fixedStepSeconds;       /* 0/default 1/20; otherwise 0.001..1 */
    uint32_t renderFlags;         /* enum OoTEngineRenderFlags */
    OoTEngineDebugCallback debugCallback;
    void *debugUserData;
    OoTEngineSfxCallback sfxCallback;
    void *sfxUserData;
} OoTEngineConfig;
/* Host input for one simulation interval.  camLook is the camera-to-Link
   direction in the XZ plane.  It is normalized by the wrapper; (0,0) uses
   the +Z default.  Stick components are clamped to [-1,1], with negative and
   positive stickX meaning camera-left and camera-right respectively. */
typedef struct OoTEngineInput
{
    uint32_t structSize;
    float camLookX;
    float camLookZ;
    float stickX;
    float stickY;
    uint32_t buttons;             /* enum OoTEngineButtons bit mask */
} OoTEngineInput;
extern OOT_LIB_FN uint32_t oot_engine_api_version(void);
extern OOT_LIB_FN const char *oot_engine_result_string(OoTResult result);
/* Safe initializers for dynamic-language/FFI consumers. They validate the
   caller's compiled struct size and API version before writing anything, and
   never write beyond the smaller of structSize and this library's structure.
   Native C/C++ callers should normally use the convenience macros below. */
extern OOT_LIB_FN OoTResult oot_engine_config_init_sized(
    OoTEngineConfig *config, uint32_t structSize, uint32_t apiVersion);
extern OOT_LIB_FN OoTResult oot_engine_input_init_sized(
    OoTEngineInput *input, uint32_t structSize, uint32_t apiVersion);
extern OOT_LIB_FN OoTResult oot_engine_create(const OoTEngineConfig *config,
                                               OoTEngine **outEngine);
extern OOT_LIB_FN OoTResult oot_engine_destroy(OoTEngine *engine);
extern OOT_LIB_FN OoTResult oot_engine_set_callbacks(OoTEngine *engine,
                                                      OoTEngineDebugCallback debugCallback,
                                                      void *debugUserData,
                                                      OoTEngineSfxCallback sfxCallback,
                                                      void *sfxUserData);
extern OOT_LIB_FN OoTResult oot_engine_link_create(OoTEngine *engine,
                                                    float x, float y, float z);
extern OOT_LIB_FN OoTResult oot_engine_link_delete(OoTEngine *engine);
extern OOT_LIB_FN OoTResult oot_engine_link_set_age(OoTEngine *engine, uint8_t age);
extern OOT_LIB_FN OoTResult oot_engine_link_set_equipment(OoTEngine *engine,
                                                          uint8_t sword, uint8_t shield,
                                                          uint8_t tunic, uint8_t boots);
extern OOT_LIB_FN OoTResult oot_engine_link_use_item(OoTEngine *engine, uint8_t item);
extern OOT_LIB_FN OoTResult oot_engine_link_set_health(OoTEngine *engine,
                                                       int16_t health, int16_t capacity);
extern OOT_LIB_FN OoTResult oot_engine_link_damage(OoTEngine *engine, int16_t amount);
extern OOT_LIB_FN OoTResult oot_engine_link_set_magic(OoTEngine *engine,
                                                      uint8_t level, int16_t amount);
/* liboot vNEXT: move Link in place (position + facing yaw) without recreating
   him; combine with oot_engine_link_freeze for a clean reposition. */
extern OOT_LIB_FN OoTResult oot_engine_link_set_pose(OoTEngine *engine,
                                                     float x, float y, float z, int16_t yaw);
/* liboot vNEXT: freeze/unfreeze Link's simulation; a frozen Link still renders. */
extern OOT_LIB_FN OoTResult oot_engine_link_freeze(OoTEngine *engine, uint8_t frozen);
/* liboot vNEXT: set the invincibility timer (positive intangible / negative
   invulnerable / 0 clear); re-apply each tick to hold it. */
extern OOT_LIB_FN OoTResult oot_engine_link_set_invincible(OoTEngine *engine, int8_t frames);