src/liboot.h

struct OoTSequenceInfo
{
    uint32_t structSize;       /* caller sets sizeof(struct OoTSequenceInfo) */
    uint32_t version;          /* caller sets OOT_SEQUENCE_INFO_VERSION */
    uint16_t sequenceId;
    uint16_t resolvedId;       /* target id after resolving a table alias */
    uint32_t dataSize;
    uint8_t fontCount;
    uint8_t isAlias;
    uint8_t medium;
    uint8_t cachePolicy;
    uint8_t fontIds[8];        /* sequence font order, unused slots are 0xFF */
    uint32_t reserved;
};
struct OoTAudioState
{
    uint32_t structSize;       /* caller sets sizeof(struct OoTAudioState) */
    uint32_t version;          /* caller sets OOT_AUDIO_STATE_VERSION */
    uint16_t sequenceId;
    uint16_t resolvedId;
    uint8_t player;
    uint8_t playing;
    uint8_t paused;
    uint8_t finished;
    uint8_t activeChannels;
    uint8_t activeVoices;
    uint8_t reserved8[2];
    float volume;
    uint64_t framesRendered;
};
struct OoTSfxInfo
{
    uint32_t structSize;       /* caller sets sizeof(struct OoTSfxInfo) */
    uint32_t version;          /* caller sets OOT_SFX_INFO_VERSION */
    uint16_t sfxId;
    uint8_t bank;              /* 0 player, 1 item, 2 env, 3 enemy, ... */
    uint8_t reserved8;
    uint16_t bankIndex;
    uint16_t reserved16;
    char name[48];
};
extern OOT_LIB_FN int32_t oot_audio_sequence_count( void );
extern OOT_LIB_FN const char *oot_audio_sequence_name( uint16_t sequenceId );
extern OOT_LIB_FN bool oot_audio_sequence_get_info( uint16_t sequenceId,
                                                     struct OoTSequenceInfo *outInfo );
/* Decode/cache every sample reachable by this sequence. This may allocate and
   should run before starting a real-time audio device, never in its callback. */
extern OOT_LIB_FN bool oot_audio_sequence_prewarm( uint16_t sequenceId );
extern OOT_LIB_FN bool oot_audio_sequence_play( uint8_t player, uint16_t sequenceId,
                                                uint16_t fadeInMs );
/* Start AudioSeq 1 with one of OoT's 19 retail nature presets.  Unlike a raw
   sequence play this also applies the preset's player/channel IO program
   (stream type, critters, pitch, layer count and reverb). */
extern OOT_LIB_FN bool oot_audio_nature_play( uint8_t player, uint8_t ambienceId,
                                              uint16_t fadeInMs );
extern OOT_LIB_FN void oot_audio_sequence_stop( uint8_t player, uint16_t fadeOutMs );
extern OOT_LIB_FN void oot_audio_sequence_pause( uint8_t player, bool paused );
extern OOT_LIB_FN void oot_audio_sequence_set_volume( uint8_t player, float volume );
extern OOT_LIB_FN void oot_audio_sequence_set_io( uint8_t player, uint8_t port,
                                                  int8_t value );
extern OOT_LIB_FN void oot_audio_channel_set_io( uint8_t player, uint8_t channel,
                                                 uint8_t port, int8_t value );
extern OOT_LIB_FN bool oot_audio_sequence_get_state( uint8_t player,
                                                     struct OoTAudioState *outState );
extern OOT_LIB_FN void oot_audio_set_master_volume( float volume );
extern OOT_LIB_FN void oot_audio_stop_all( uint16_t fadeOutMs );
/* Fill interleaved stereo F32 by converting the canonical S16 render above.
   Each sample is exactly s16 / 32768.0f; all state and serialization rules are
   the same as oot_audio_render_s16. */
extern OOT_LIB_FN uint32_t oot_audio_render_f32( float *stereo, uint32_t frames,
                                                 uint32_t sampleRate );
extern OOT_LIB_FN int32_t oot_audio_sfx_catalog_count( void );
extern OOT_LIB_FN bool oot_audio_sfx_catalog_get( int32_t catalogIndex,
                                                  struct OoTSfxInfo *outInfo );
extern OOT_LIB_FN bool oot_audio_sfx_play( uint16_t sfxId, float pan, float volume );
extern OOT_LIB_FN void oot_audio_sfx_stop( uint16_t sfxId );
extern OOT_LIB_FN void oot_audio_sfx_stop_all( void );