bindings/csharp/LibOot.cs


    [StructLayout(LayoutKind.Sequential)]
    public struct EnginePcm
    {
        public uint StructSize;
        public IntPtr Samples;
        public uint SampleCount;
        public uint SampleRate;
        public uint LoopStart;
    }

    public static unsafe class Native
    {
        public const string LibraryName = "liboot";
        public const uint EngineApiVersion = 1;
        public const float DefaultFixedStep = 1.0f / 20.0f;
        public const uint InvalidTarget = 0;
        public const ushort AudioSequenceCatalogCount = 110;
        public const ushort AudioNoMusic = 0x7F;
        public const ushort AudioNatureRain = 0x80;
        public const byte AudioNatureCount = 19;
        public const byte AudioNatureNone = 0x13;
        public const uint SequenceInfoVersion = 1;
        public const uint AudioStateVersion = 1;
        public const uint SfxInfoVersion = 1;

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_api_version")]
        public static extern uint EngineApiVersionGet();

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_result_string")]
        private static extern IntPtr EngineResultStringNative(Result result);

        public static string EngineResultString(Result result)
        {
            return Marshal.PtrToStringAnsi(EngineResultStringNative(result))
                ?? "unknown result";
        }

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sequence_count")]
        public static extern int AudioSequenceCount();

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sequence_name")]
        private static extern IntPtr AudioSequenceNameNative(ushort sequenceId);

        public static string AudioSequenceName(ushort sequenceId)
        {
            return Marshal.PtrToStringAnsi(AudioSequenceNameNative(sequenceId))
                ?? "UNKNOWN";
        }

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sequence_get_info")]
        [return: MarshalAs(UnmanagedType.I1)]
        private static extern bool AudioSequenceGetInfoNative(ushort sequenceId,
            ref SequenceInfo info);

        public static bool AudioSequenceGetInfo(ushort sequenceId,
            out SequenceInfo info)
        {
            info = new SequenceInfo();
            info.StructSize = (uint)Marshal.SizeOf(typeof(SequenceInfo));
            info.Version = SequenceInfoVersion;
            return AudioSequenceGetInfoNative(sequenceId, ref info);
        }

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sequence_prewarm")]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool AudioSequencePrewarm(ushort sequenceId);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sequence_play")]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool AudioSequencePlay(AudioPlayer player,
            ushort sequenceId, ushort fadeInMs);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_nature_play")]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool AudioNaturePlay(AudioPlayer player,
            byte ambienceId, ushort fadeInMs);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sequence_stop")]
        public static extern void AudioSequenceStop(AudioPlayer player,
            ushort fadeOutMs);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sequence_pause")]
        public static extern void AudioSequencePause(AudioPlayer player,
            [MarshalAs(UnmanagedType.I1)] bool paused);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sequence_set_volume")]
        public static extern void AudioSequenceSetVolume(AudioPlayer player,
            float volume);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sequence_set_io")]
        public static extern void AudioSequenceSetIo(AudioPlayer player,
            byte port, sbyte value);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_channel_set_io")]
        public static extern void AudioChannelSetIo(AudioPlayer player,
            byte channel, byte port, sbyte value);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sequence_get_state")]
        [return: MarshalAs(UnmanagedType.I1)]
        private static extern bool AudioSequenceGetStateNative(AudioPlayer player,
            ref AudioState state);

        public static bool AudioSequenceGetState(AudioPlayer player,
            out AudioState state)
        {
            state = new AudioState();
            state.StructSize = (uint)Marshal.SizeOf(typeof(AudioState));
            state.Version = AudioStateVersion;
            return AudioSequenceGetStateNative(player, ref state);
        }

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_set_master_volume")]
        public static extern void AudioSetMasterVolume(float volume);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_stop_all")]
        public static extern void AudioStopAll(ushort fadeOutMs);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_render_f32")]
        public static extern uint AudioRenderF32(float* interleavedStereo,
            uint frames, uint sampleRate);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sfx_catalog_count")]
        public static extern int AudioSfxCatalogCount();

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sfx_catalog_get")]
        [return: MarshalAs(UnmanagedType.I1)]
        private static extern bool AudioSfxCatalogGetNative(int catalogIndex,
            ref SfxInfo info);

        public static bool AudioSfxCatalogGet(int catalogIndex, out SfxInfo info)
        {
            info = new SfxInfo();
            info.StructSize = (uint)Marshal.SizeOf(typeof(SfxInfo));
            info.Version = SfxInfoVersion;
            return AudioSfxCatalogGetNative(catalogIndex, ref info);
        }

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sfx_play")]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool AudioSfxPlay(ushort sfxId, float pan,
            float volume);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sfx_stop")]
        public static extern void AudioSfxStop(ushort sfxId);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_audio_sfx_stop_all")]
        public static extern void AudioSfxStopAll();

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_config_init_sized")]
        public static extern Result EngineConfigInitSized(ref EngineConfig config,
            uint structSize, uint apiVersion);

        public static Result EngineConfigInit(ref EngineConfig config)
        {
            if (EngineApiVersionGet() != EngineApiVersion)
                return Result.ApiVersion;

            return EngineConfigInitSized(ref config,
                (uint)Marshal.SizeOf(typeof(EngineConfig)), EngineApiVersion);
        }

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_input_init_sized")]
        public static extern Result EngineInputInitSized(ref EngineInput input,
            uint structSize, uint apiVersion);

        public static Result EngineInputInit(ref EngineInput input)
        {
            if (EngineApiVersionGet() != EngineApiVersion)
                return Result.ApiVersion;

            return EngineInputInitSized(ref input,
                (uint)Marshal.SizeOf(typeof(EngineInput)), EngineApiVersion);
        }

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_create")]
        public static extern Result EngineCreate(ref EngineConfig config,
            out IntPtr engine);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_destroy")]
        public static extern Result EngineDestroy(IntPtr engine);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_set_callbacks")]
        public static extern Result EngineSetCallbacks(IntPtr engine,
            IntPtr debugCallback, IntPtr debugUserData,
            IntPtr sfxCallback, IntPtr sfxUserData);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_link_create")]
        public static extern Result EngineLinkCreate(IntPtr engine,
            float x, float y, float z);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_link_delete")]
        public static extern Result EngineLinkDelete(IntPtr engine);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_link_set_age")]
        public static extern Result EngineLinkSetAge(IntPtr engine, Age age);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_link_set_equipment")]
        public static extern Result EngineLinkSetEquipment(IntPtr engine,
            Sword sword, Shield shield, Tunic tunic, Boots boots);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_link_use_item")]
        public static extern Result EngineLinkUseItem(IntPtr engine, Item item);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_link_set_health")]
        public static extern Result EngineLinkSetHealth(IntPtr engine,
            short health, short capacity);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_link_damage")]
        public static extern Result EngineLinkDamage(IntPtr engine, short amount);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_link_set_magic")]
        public static extern Result EngineLinkSetMagic(IntPtr engine,
            byte level, short amount);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_link_set_pose")]
        public static extern Result EngineLinkSetPose(IntPtr engine,
            float x, float y, float z, short yaw);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_link_freeze")]
        public static extern Result EngineLinkFreeze(IntPtr engine, byte frozen);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_link_set_invincible")]
        public static extern Result EngineLinkSetInvincible(IntPtr engine, sbyte frames);
